feat: delete short url
