# swagger.json
@@ -175,6 +175,35 @@
             "description": "Internal server error"
           }
         }
+      },
+      "delete": {
+        "summary": "Delete a short URL",
+        "description": "Delete a short URL for the given short code",
+        "tags": [
+          "Shortener"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "shortCode",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The short code for the short URL."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Short URL deleted successfully"
+          },
+          "404": {
+            "description": "Short code not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
       }
     },
     "/api/shortener/{shortCode}/clicks": {
